src/scss/common/questions.scss
/* ... */
.inline-multi-choice-container {
  @extend .inline-container;


  button.btn {
    min-width: unset;
    font-family: $primary-font !important;
    background-color: transparent;
    border-radius: $border-radius-lg;

    &:not(.is-valid):not(.is-invalid):not(.is-unanswered) {
      border: $gray-136 solid 1px;
    }

    > span {
      max-width: 100%;
      white-space: nowrap;
      overflow: hidden;
    }

    > div {
      margin-top: -1px; // equal to the border width above, re-centres contents
    }
  }
}

.symbolic-question, .equality-page {
  .eqn-editor-preview {
    padding: 0.25rem 1rem;
    cursor: default;
    &.empty {
      color: var(--bs-tertiary-color);
    }
  }

  .eqn-editor-preview {
    background: var(--color-neutral-white, white);
  }

  .eqn-editor-input input {
    font-family: monospace;
    height: auto;
  }

  .eqn-editor-help {
    min-width: 0;
  }

  .eqn-editor-symbols {
    margin-top: 3px;

    & pre {
      display: inline;
      white-space: pre-wrap;
      background: inherit;
      border: 0;
      padding: 0;
    }
  }

  .eqn-editor-reset-text-input {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0.5rem;
    width: 1.5rem;
    height: 1.5rem;
    padding: 0;
    font-size: 1rem;
    line-height: 1rem;
    background: none;
    border: none;
    cursor: pointer;
    color: $gray-600;

    &:hover {
      color: $gray-800;
    }
  }
}

#inequality-help {
  min-width: 0;
}

.parsons-question {
  .parsons-items {
    border: solid 1px $gray-136;
    padding: 0 0.5em;

    &.empty {
      padding: 0.875em 0.5em;
      &.drag-over {
        padding-top: 1.1em;
        padding-bottom: 1.1em;
      }
    }

    // REMINDER: If you change the PARSONS_MAX_INDENT and PARSONS_INDENT_STEP
    // constants, you also have to change these two in here.
    $parsons-max-indent: 3;
    $parsons-step: 45;

    .parsons-item {
      @for $i from 0 through $parsons-max-indent {
        &.indent-#{$i} {
          margin-left: #{$i * $parsons-step}px;
        }
      }

      .indent-buttons {
        display: flex;
        align-items: center;

        button {
          display: grid;
          position: relative;
          justify-content: center;
          align-content: center;

          width: 20px;
          height: 20px;
          padding: 0;
          background-color: $gray-120;

          &.show:focus, &.show:hover {
            background-color: $primary;
          }

          &.hide {
            opacity: 0.2;
            cursor: default;
          }

          &.show {
            opacity: 1.0;
          }
        }
      }
    }
    
    .parsons-item, .reorder-item {
      display: flex;
      align-items: center;
      position: relative;
      border: solid 1px $gray-136;
      margin: 0.5rem 0;
      background: var(--color-neutral-white, white);

      pre {
        margin: 0.25em 0.5em;
        padding: 0.25em 0;
        border: none;
        background: none;
      }

      .reorder-buttons {
        display: flex;
        flex-direction: column;
        align-items: center;

        button {
          display: grid;
          justify-content: center;
        }
      }

      .swap-button {
        display: flex;
        justify-content: center;
        
        .icon {
          background-color: $gray-120;
        }

        &:hover, &:focus {
          .icon {
            background-color: $primary;
          }
        }
      }

      // Use negative z-index rather than `display: none` to hide buttons so they can still be selected using keyboard controls
      .hidden-buttons {
        position: absolute;
        right: 2px;
        background-color: var(--color-neutral-white, white);
        padding: 2px 0;

        z-index: -100;
      }
      
      &:hover, &:focus-within {
        .hidden-buttons {
          z-index: 2;
        }
      }
    }

    &#parsons-choice-area {
      @for $i from 0 through $parsons-max-indent {
        &.ghost-indent-#{$i} {
          background: linear-gradient(to right,
            white #{$i * $parsons-step + 5}px, $gray-400 #{$i * $parsons-step + 5}px, $gray-400 #{$i * $parsons-step + 7}px, white #{$i * $parsons-step + 7}px
          );
        }
      }

      &.is-dragging {
        .parsons-item {
          opacity: 0.666;
        }
      }
    }
  }
}

.inequality-results {
  pre {
    white-space: pre-wrap;
  }
}

.quick-question {
  .alert {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }
}

.validation-response-panel {
  text-align: center;
  p {
    margin-bottom: 0;
  }
}

.cloze-question {
  // This is a work around, allowing KaTeX to be used for cloze questions.
  //  There is no guarantee that it works all of the time, so needs to be
  //  checked on a case by case basis.
  .katex {
    display: unset;
    * {
      pointer-events: none;
    }
    .cloze-item, .cloze-dropdown * {
      pointer-events: all;
    }
  }
  .cloze-item, .cloze-dropdown * {
    pointer-events: all;
    .katex-display {
      display: unset;
    }
  }
  .dropdown-menu {
    max-height: $cloze-dropdown-height;
    overflow-y: scroll;
    .invalid{
      color: darkgray;
    }
  }
}

.item-section {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  align-items: center;
  // gridAutoRows: "max-content",
  // gridTemplateColumns: "repeat(2, 1fr)",
  min-height: 64px;
}

.cloze-item {
  touch-action: none;
  position: relative;
  font-size: 1rem !important;
  border: 1px solid $border-color;

  &.is-dragging {
    opacity: 0.666;
  }
}

.dropdown .cloze-item {
  border: none;
}

.cloze-drop-zone, .cloze-dropdown {
  &.incorrect {
    filter: drop-shadow(0 0 0.3rem red);
  }
}
/* ... */

